# Monopoly

./: .gitignore  Judge.c  Judge.h  README.md  complie.py  demo.c  log  output  test.c  test.py  xx.py
development/: .gitignore  CMakeLists.txt  Game.c  Game.h  Judge.c  Judge.h  Map.c  Map.h  MapCell.c  MapCell.h  Player.c  Player.h  Property.c  Property.h  Tool.c  Tool.h  main.c  test.c
test/: demo.c
test_file/: log  test_file_explanation
test_file/dump/: out_0
test_file/dump/barrier/: out_0  out_1  out_2
test_file/dump/buy_land/: out_0
test_file/dump/initial/: out_0  out_1  out_2  out_3  out_4  out_5  out_6
test_file/dump/sell_land/: out_0  out_1
test_file/dump/update_land/: out_1
test_file/group_1_test/: .gitignore
test_file/group_1_test/test/: input_8.txt
test_file/group_1_test/test2/: input_10.txt  input_20.txt  input_21.txt  input_22.txt  input_23.txt  input_24.txt  input_25.txt  input_26.txt  input_27.txt  input_28.txt  input_29.txt  input_30.txt  input_31.txt  input_32.txt  input_33.txt  input_34.txt  input_35.txt  input_36.txt  input_37.txt  input_38.txt  input_39.txt  log_0  log_1  log_10  log_11  log_12  log_13  log_14  log_15  log_16  log_17  log_18  log_19  log_2  log_20  log_21  log_22  log_23  log_24  log_25  (+58 more)
test_file/group_2_test/: .gitignore  test_file_explanation
test_file/group_2_test/log/: log_
test_file/group_3_test/: .gitignore
test_file/group_3_test/Other/: dump_2  log_1  log_2  log_3  log_4
test_file/group_4_test/: .gitignore
test_file/input/: input_0
test_file/output/: output_0  output_11
(+558 files in other folders)
